# claudevil

./: .gitignore  .releaserc.json  AGENTS.md  Cargo.toml  Cross.toml  PLANS.md  README.md  flake.nix
.github/workflows/: build-nix.yml  build.yml  ci.yml  codeql.yml  pages.yml  release.yml  security.yml
plans/: new-mcp-tools.md  usearch-migration.md
site/: config.toml
site/content/: _index.md
site/sass/: style.scss
site/templates/: base.html  index.html
src/: chunker.rs  config.rs  embed.rs  error.rs  indexer.rs  main.rs  server.rs  store.rs
